Fix collapsed buttons

--- a/css/jqm-datebox.css
+++ b/css/jqm-datebox.css
@@ -108,7 +108,7 @@
 .ui-dialog .ui-datebox-container { border: none !important; }
 .ui-popup-container .ui-datebox-container { border: none !important; }
 .ui-popup-container .ui-datebox-gridrow { margin-left: 0px; margin-right: 0px; }
-.ui-datebox-collapse a { display: inline-block; width: 45% }
+.ui-datebox-collapse a { display: inline-block; width: 25% }
 
 .ui-datebox-inline, .ui-datebox-inlineblind { margin-top: 5px; border: 5px solid #111111 !important; margin-left: auto !important; margin-right: auto !important; text-align: center;}
 .ui-datebox-inlineblind { width: 300px !important; float: none !important; clear: left !important; }
